--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Catálogo de Plantas</title>
+  <title>Catálogo</title>
 </head>
 <body>
 
-<h1>🌱 Mi catálogo funciona</h1>
-<p>Si ves esto, todo va bien</p>
+<h1>🌱 Catálogo de productos</h1>
+
+<div id="productos"></div>
+
+<script type="module" src="js/firebase.js"></script>
+<script type="module" src="js/productos.js"></script>
 
 </body>
 </html>
+
