Update title and header in index.html

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Catálogo</title>
+  <title>Catálogo de Productos</title>
 </head>
 <body>
 
-<h1>🌱 Catálogo de productos</h1>
-
+<h1>🌱 Catálogo de Productos</h1>
 <div id="productos"></div>
 
 <script type="module" src="js/firebase.js"></script>
@@ -15,4 +14,3 @@
 
 </body>
 </html>
-
