--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; }
     h1 { color: green; }
-    .card { border: 1px solid #ccc; padding: 10px; margin: 10px; display: inline-block; width: 150px; }
+    .card { border: 1px solid #ccc; padding: 10px; margin: 10px; display: inline-block; width: 200px; text-align: center; }
+    .card h3 { margin: 10px 0 5px 0; }
+    .card p { margin: 5px 0; }
   </style>
 </head>
 <body>
