--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
     .card { border: 1px solid #ccc; padding: 10px; margin: 10px; display: inline-block; width: 200px; text-align: center; }
     .card h3 { margin: 10px 0 5px 0; }
     .card p { margin: 5px 0; }
+    button { padding: 5px 10px; margin-top: 5px; cursor: pointer; }
+    button:disabled { background-color: #ccc; cursor: not-allowed; }
   </style>
 </head>
 <body>
 
 <h1>🌱 Catálogo de Productos</h1>
-
-<!-- Aquí se mostrarán los productos -->
 <div id="productos"></div>
 
-<!-- Firebase -->
 <script type="module" src="js/firebase.js"></script>
-<!-- Código para leer productos -->
 <script type="module" src="js/productos.js"></script>
 
 </body>
