Add Firebase and Productos scripts to index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 <h1>🌱 Catálogo de Productos</h1>
 <div id="productos"></div>
 
+<!-- Firebase -->
 <script type="module" src="js/firebase.js"></script>
+<!-- Productos -->
 <script type="module" src="js/productos.js"></script>
 
 </body>
