--- a/index.html
+++ b/index.html
@@ -2,25 +2,16 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Catálogo de Productos</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    h1 { color: green; }
-    .card { border: 1px solid #ccc; padding: 10px; margin: 10px; display: inline-block; width: 200px; text-align: center; }
-    .card h3 { margin: 10px 0 5px 0; }
-    .card p { margin: 5px 0; }
-    button { padding: 5px 10px; margin-top: 5px; cursor: pointer; }
-    button:disabled { background-color: #ccc; cursor: not-allowed; }
-  </style>
+  <title>Catálogo</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<h1>🌱 Catálogo de Productos</h1>
-<div id="productos"></div>
+  <h1>🌱 Catálogo de Productos</h1>
 
-<!-- Firebase -->
+<div id="productos" class="grid"></div>
+
 <script type="module" src="js/firebase.js"></script>
-<!-- Productos -->
 <script type="module" src="js/productos.js"></script>
 
 </body>
