Update title and structure in index.html

--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Catálogo</title>
+  <title>Catálogo de Productos</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <h1>🌱 Catálogo de Productos</h1>
+  <h1>Catálogo de Productos</h1>
 
-<div id="productos" class="grid"></div>
+  <div id="productos"></div>
 
-<script type="module" src="js/firebase.js"></script>
-<script type="module" src="js/productos.js"></script>
+  <!-- JS (OJO A LAS RUTAS) -->
+  <script type="module" src="js/firebase.js"></script>
+  <script type="module" src="js/productos.js"></script>
 
 </body>
 </html>
