Update index.html to include product listings
Added a product section with two Chiflera items.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Catálogo de Productos</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>Catálogo de Productos</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <h1>Catálogo de Productos</h1>
+    <h1>🌱 Catálogo de Productos</h1>
 
-  <div id="productos"></div>
+    <div class="catalogo">
+        <div class="producto">
+            <img src="images/chiflera.jpeg" alt="Chiflera">
+            <h3>Chiflera</h3>
+            <p>$5</p>
+        </div>
 
-  <!-- JS (OJO A LAS RUTAS) -->
-  <script type="module" src="js/firebase.js"></script>
-  <script type="module" src="js/productos.js"></script>
+        <div class="producto">
+            <img src="images/chiflera.jpeg" alt="Chiflera pequeña">
+            <h3>Chiflera pequeña</h3>
+            <p>$3</p>
+        </div>
+    </div>
 
 </body>
 </html>
