--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="producto">
-            <img src="images/chiflera.jpeg" alt="Chiflera pequeña">
+            <img src="images/bonsai-ficus.jpg" alt="Chiflera pequeña">
             <h3>Chiflera pequeña</h3>
             <p>$3</p>
         </div>
