--- a/index.html
+++ b/index.html
@@ -2,26 +2,17 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Catálogo de Productos</title>
+    <title>Catálogo</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <h1>🌱 Catálogo de Productos</h1>
+<h1>🌱 Catálogo de Productos</h1>
 
-    <div class="catalogo">
-        <div class="producto">
-            <img src="images/chiflera.jpeg" alt="Chiflera">
-            <h3>Chiflera</h3>
-            <p>$5</p>
-        </div>
+<div id="productos"></div>
 
-        <div class="producto">
-            <img src="images/bonsai-ficus.jpg" alt="Chiflera pequeña">
-            <h3>Chiflera pequeña</h3>
-            <p>$3</p>
-        </div>
-    </div>
+<script type="module" src="js/firebase.js"></script>
+<script type="module" src="js/productos.js"></script>
 
 </body>
 </html>
