Update index.html for Bonsái catalog

--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Catálogo</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Catálogo de Bonsáis</title>
+  <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 
-<h1>🌱 Catálogo de Productos</h1>
+  <h1>Catálogo de Productos</h1>
 
-<div id="productos"></div>
+  <div id="productos" class="grid"></div>
 
-<script type="module" src="js/firebase.js"></script>
-<script type="module" src="js/productos.js"></script>
-
+  <script type="module" src="js/firebase.js"></script>
+  <script type="module" src="js/productos.js"></script>
 </body>
 </html>
