--- a/catalogo.html
+++ b/catalogo.html
@@ -6,29 +6,16 @@
   <title>Catálogo - Servigreen</title>
   <link rel="stylesheet" href="css/estilos.css">
 </head>
-  <div id="modalProducto" class="modal">
-  <div class="modal-box">
-    <span class="cerrar" onclick="cerrarModal()">×</span>
+  <!-- MODAL -->
+<div id="modalProducto" class="modal">
+  <div class="modal-contenido">
+    <span class="cerrar" id="cerrarModal">&times;</span>
 
-    <div class="modal-grid">
-      <div>
-        <img id="m-img-principal">
-        <div id="m-miniaturas"></div>
-      </div>
-
-      <div>
-        <h2 id="m-nombre"></h2>
-        <p id="m-precio"></p>
-        <p id="m-descripcion"></p>
-
-        <ul id="m-specs"></ul>
-
-        <button onclick="agregarCarrito()">Agregar al carrito</button>
-        <a id="btnWs" target="_blank">
-          <button>WhatsApp</button>
-        </a>
-      </div>
-    </div>
+    <img id="modalImagen" src="" alt="">
+    <h2 id="modalNombre"></h2>
+    <p><strong>Precio:</strong> $<span id="modalPrecio"></span></p>
+    <p><strong>Categoría:</strong> <span id="modalCategoria"></span></p>
+    <p><strong>Stock:</strong> <span id="modalStock"></span></p>
   </div>
 </div>
 
