--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Servigreen - Inicio</title>
   <link rel="stylesheet" href="css/estilos.css">
+  <link rel="stylesheet" href="animaciones.css">
 </head>
   <!-- CARRITO SIDEBAR -->
   <div id="carrito-overlay"></div>
@@ -31,6 +32,7 @@
   </div>
 
   <script src="js/carrito.js"></script>
+  <script src="animaciones.js"></script>
 </body>
 <body>
   
