--- a/contacto.html
+++ b/contacto.html
@@ -17,8 +17,8 @@
         <a href="catalogo.html">Catálogo</a>
         <a href="contacto.html" class="activo">Contacto</a>
       </nav>
-      <button class="carrito-btn" onclick="alert('Carrito próximamente')">
-        🛒 <span>0</span>
+      <button class="carrito-btn" onclick="toggleCarrito()">
+        🛒 <span id="carrito-count" class="carrito-count">0</span>
       </button>
     </div>
   </header>
@@ -105,6 +105,31 @@
     <p>&copy; 2024 Servigreen - Naturaleza en tu hogar</p>
   </footer>
 
+  <!-- CARRITO SIDEBAR -->
+  <div id="carrito-overlay"></div>
+  <div id="carrito-sidebar">
+    <div class="carrito-header">
+      <h2>🛒 Tu Carrito</h2>
+      <button class="carrito-close" onclick="toggleCarrito()">&times;</button>
+    </div>
+    
+    <div id="carrito-items"></div>
+    
+    <div id="carrito-footer" style="display: none;">
+      <div class="carrito-total-container">
+        <span class="carrito-total-label">Total:</span>
+        <span id="carrito-total">$0.00</span>
+      </div>
+      <div class="carrito-acciones">
+        <button onclick="vaciarCarrito()" class="btn-vaciar">Vaciar Carrito</button>
+        <button onclick="checkoutWhatsApp()" class="btn-checkout">
+          Realizar Pedido por WhatsApp
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <script src="js/carrito.js"></script>
   <script>
     function enviarMensaje(event) {
       event.preventDefault();
