--- a/index.html
+++ b/index.html
@@ -219,5 +219,58 @@
 
   <script type="module" src="js/carrito.js"></script>
   <script src="js/ui.js"></script>
+  <section class="easter-egg">
+  <div class="container">
+    <h2 class="titulo-seccion">Descubre el Bonsai</h2>
+    <p class="egg-subtitulo">Arrastra una hoja y sueltala para verla caer.</p>
+
+    <div class="bonsai-escena" id="bonsai-escena">
+      <svg class="bonsai-svg" viewBox="0 0 800 500" aria-hidden="true">
+        <!-- Maceta -->
+        <rect x="320" y="380" width="160" height="60" rx="8" fill="#5b3a21"/>
+        <rect x="300" y="360" width="200" height="30" rx="6" fill="#7a4b2a"/>
+
+        <!-- Tronco -->
+        <path d="M400 360 C380 320, 390 280, 360 250
+                 C340 230, 350 200, 380 180
+                 C420 150, 430 120, 410 90"
+              stroke="#3b2517" stroke-width="18" fill="none" stroke-linecap="round"/>
+
+        <!-- Ramas -->
+        <path d="M390 240 C330 220, 300 200, 280 170" stroke="#3b2517" stroke-width="10" fill="none" stroke-linecap="round"/>
+        <path d="M400 210 C450 190, 500 170, 530 140" stroke="#3b2517" stroke-width="10" fill="none" stroke-linecap="round"/>
+        <path d="M420 150 C470 130, 520 120, 560 110" stroke="#3b2517" stroke-width="8" fill="none" stroke-linecap="round"/>
+      </svg>
+
+      <div class="hoja" data-texto="XXXXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX">
+        <span class="hoja-titulo">Que es Servigreen</span>
+        <span class="hoja-detalle">XXXXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX</span>
+      </div>
+
+      <div class="hoja hoja-2" data-texto="XXXXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX">
+        <span class="hoja-titulo">Personalizar jardines</span>
+        <span class="hoja-detalle">XXXXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX</span>
+      </div>
+
+      <div class="hoja hoja-3" data-texto="XXXXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX">
+        <span class="hoja-titulo">Bonsais y plantas</span>
+        <span class="hoja-detalle">XXXXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX</span>
+      </div>
+
+      <div class="hoja hoja-4" data-texto="XXXXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX">
+        <span class="hoja-titulo">Asesoramiento</span>
+        <span class="hoja-detalle">XXXXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX</span>
+      </div>
+
+      <div class="hoja hoja-5" data-texto="XXXXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX">
+        <span class="hoja-titulo">Cultura</span>
+        <span class="hoja-detalle">XXXXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXX</span>
+      </div>
+    </div>
+  </div>
+</section>
+
+<script src="js/leaf.js"></script>
+
 </body>
 </html>
